--- a/mytest/testGame/proj.win32/testGame.vcxproj.filters
+++ b/mytest/testGame/proj.win32/testGame.vcxproj.filters
@@ -32,6 +32,9 @@
     <ClInclude Include="..\Classes\HelloWorldScene.h">
       <Filter>src</Filter>
     </ClInclude>
+    <ClInclude Include="constant.h">
+      <Filter>win32</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="game.rc">
