--- a/mytest/testGame/proj.win32/testGame.vcxproj.filters
+++ b/mytest/testGame/proj.win32/testGame.vcxproj.filters
@@ -13,6 +13,9 @@
     <Filter Include="src\scene">
       <UniqueIdentifier>{a74ee5f4-fb20-4373-be73-dfcdfacedfa4}</UniqueIdentifier>
     </Filter>
+    <Filter Include="src\layer">
+      <UniqueIdentifier>{b0385485-34d2-4c88-b59d-4d4a5a5f77dc}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
@@ -30,6 +33,9 @@
     <ClCompile Include="..\Classes\scene\TownScene.cpp">
       <Filter>src\scene</Filter>
     </ClCompile>
+    <ClCompile Include="..\Classes\layer\InventoryLayer.cpp">
+      <Filter>src\layer</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="main.h">
@@ -37,9 +43,6 @@
     </ClInclude>
     <ClInclude Include="..\Classes\AppDelegate.h">
       <Filter>src</Filter>
-    </ClInclude>
-    <ClInclude Include="constant.h">
-      <Filter>win32</Filter>
     </ClInclude>
     <ClInclude Include="..\Classes\scene\HelloWorldScene.h">
       <Filter>src\scene</Filter>
@@ -49,6 +52,9 @@
     </ClInclude>
     <ClInclude Include="..\Classes\scene\TownScene.h">
       <Filter>src\scene</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Classes\layer\InventoryLayer.h">
+      <Filter>src\layer</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
