--- a/mytest/testGame/proj.win32/testGame.vcxproj
+++ b/mytest/testGame/proj.win32/testGame.vcxproj
@@ -151,7 +151,6 @@ xcopy "$(ProjectDir)..\Resources" "$(OutDir)\Resources\" /D /E /I /F /Y
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="..\Classes\AppDelegate.cpp" />
-    <ClCompile Include="..\Classes\layer\InventoryLayer.cpp" />
     <ClCompile Include="..\Classes\scene\HelloWorldScene.cpp" />
     <ClCompile Include="..\Classes\scene\MapScene.cpp" />
     <ClCompile Include="..\Classes\scene\TownScene.cpp" />
@@ -159,10 +158,10 @@ xcopy "$(ProjectDir)..\Resources" "$(OutDir)\Resources\" /D /E /I /F /Y
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\Classes\AppDelegate.h" />
-    <ClInclude Include="..\Classes\layer\InventoryLayer.h" />
     <ClInclude Include="..\Classes\scene\HelloWorldScene.h" />
     <ClInclude Include="..\Classes\scene\MapScene.h" />
     <ClInclude Include="..\Classes\scene\TownScene.h" />
+    <ClInclude Include="constant.h" />
     <ClInclude Include="main.h" />
   </ItemGroup>
   <ItemGroup>
