--- a/mytest/testGame/proj.win32/testGame.vcxproj
+++ b/mytest/testGame/proj.win32/testGame.vcxproj
@@ -151,6 +151,10 @@ xcopy "$(ProjectDir)..\Resources" "$(OutDir)\Resources\" /D /E /I /F /Y
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="..\Classes\AppDelegate.cpp" />
+    <ClCompile Include="..\Classes\Characters.cpp" />
+    <ClCompile Include="..\Classes\helper\MouseCoordinateLayer.cpp" />
+    <ClCompile Include="..\Classes\layer\InventoryLayer.cpp" />
+    <ClCompile Include="..\Classes\layer\StoppingLayer.cpp" />
     <ClCompile Include="..\Classes\scene\HelloWorldScene.cpp" />
     <ClCompile Include="..\Classes\scene\MapScene.cpp" />
     <ClCompile Include="..\Classes\scene\TownScene.cpp" />
@@ -158,6 +162,10 @@ xcopy "$(ProjectDir)..\Resources" "$(OutDir)\Resources\" /D /E /I /F /Y
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\Classes\AppDelegate.h" />
+    <ClInclude Include="..\Classes\Characters.h" />
+    <ClInclude Include="..\Classes\helper\MouseCoordinateLayer.h" />
+    <ClInclude Include="..\Classes\layer\InventoryLayer.h" />
+    <ClInclude Include="..\Classes\layer\StoppingLayer.h" />
     <ClInclude Include="..\Classes\scene\HelloWorldScene.h" />
     <ClInclude Include="..\Classes\scene\MapScene.h" />
     <ClInclude Include="..\Classes\scene\TownScene.h" />
