将场景类修改为单例模式

--- a/mytest/testGame/proj.win32/testGame.vcxproj.filters
+++ b/mytest/testGame/proj.win32/testGame.vcxproj.filters
@@ -42,6 +42,9 @@
     <ClCompile Include="..\Classes\layer\StoppingLayer.cpp">
       <Filter>src</Filter>
     </ClCompile>
+    <ClCompile Include="..\Classes\scene\ForestScene.cpp">
+      <Filter>src\scene</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="main.h">
@@ -70,6 +73,9 @@
     </ClInclude>
     <ClInclude Include="..\Classes\helper\MouseCoordinateLayer.h">
       <Filter>src</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Classes\scene\ForestScene.h">
+      <Filter>src\scene</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
