--- a/mytest/testGame/proj.win32/testGame.vcxproj
+++ b/mytest/testGame/proj.win32/testGame.vcxproj
@@ -155,6 +155,7 @@ xcopy "$(ProjectDir)..\Resources" "$(OutDir)\Resources\" /D /E /I /F /Y
     <ClCompile Include="..\Classes\helper\MouseCoordinateLayer.cpp" />
     <ClCompile Include="..\Classes\layer\InventoryLayer.cpp" />
     <ClCompile Include="..\Classes\layer\StoppingLayer.cpp" />
+    <ClCompile Include="..\Classes\scene\ForestScene.cpp" />
     <ClCompile Include="..\Classes\scene\HelloWorldScene.cpp" />
     <ClCompile Include="..\Classes\scene\MapScene.cpp" />
     <ClCompile Include="..\Classes\scene\TownScene.cpp" />
@@ -166,6 +167,7 @@ xcopy "$(ProjectDir)..\Resources" "$(OutDir)\Resources\" /D /E /I /F /Y
     <ClInclude Include="..\Classes\helper\MouseCoordinateLayer.h" />
     <ClInclude Include="..\Classes\layer\InventoryLayer.h" />
     <ClInclude Include="..\Classes\layer\StoppingLayer.h" />
+    <ClInclude Include="..\Classes\scene\ForestScene.h" />
     <ClInclude Include="..\Classes\scene\HelloWorldScene.h" />
     <ClInclude Include="..\Classes\scene\MapScene.h" />
     <ClInclude Include="..\Classes\scene\TownScene.h" />
