修改人物类
使键盘监听器在场景中实现

--- a/mytest/testGame/proj.win32/testGame.vcxproj
+++ b/mytest/testGame/proj.win32/testGame.vcxproj
@@ -151,7 +151,8 @@ xcopy "$(ProjectDir)..\Resources" "$(OutDir)\Resources\" /D /E /I /F /Y
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="..\Classes\AppDelegate.cpp" />
-    <ClCompile Include="..\Classes\Characters.cpp" />
+    <ClCompile Include="..\Classes\character\Changers.cpp" />
+    <ClCompile Include="..\Classes\character\Player.cpp" />
     <ClCompile Include="..\Classes\helper\MouseCoordinateLayer.cpp" />
     <ClCompile Include="..\Classes\layer\InventoryLayer.cpp" />
     <ClCompile Include="..\Classes\layer\StoppingLayer.cpp" />
@@ -163,7 +164,8 @@ xcopy "$(ProjectDir)..\Resources" "$(OutDir)\Resources\" /D /E /I /F /Y
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\Classes\AppDelegate.h" />
-    <ClInclude Include="..\Classes\Characters.h" />
+    <ClInclude Include="..\Classes\character\Changers.h" />
+    <ClInclude Include="..\Classes\character\Player.h" />
     <ClInclude Include="..\Classes\helper\MouseCoordinateLayer.h" />
     <ClInclude Include="..\Classes\layer\InventoryLayer.h" />
     <ClInclude Include="..\Classes\layer\StoppingLayer.h" />
