--- a/mytest/testGame/proj.win32/testGame.vcxproj
+++ b/mytest/testGame/proj.win32/testGame.vcxproj
@@ -160,8 +160,11 @@ xcopy "$(ProjectDir)..\Resources" "$(OutDir)\Resources\" /D /E /I /F /Y
     <ClCompile Include="..\Classes\layer\StoppingLayer.cpp" />
     <ClCompile Include="..\Classes\scene\ForestScene.cpp" />
     <ClCompile Include="..\Classes\scene\HelloWorldScene.cpp" />
+    <ClCompile Include="..\Classes\scene\Lake.cpp" />
     <ClCompile Include="..\Classes\scene\MapScene.cpp" />
+    <ClCompile Include="..\Classes\scene\Mine1.cpp" />
     <ClCompile Include="..\Classes\scene\ParentScene.cpp" />
+    <ClCompile Include="..\Classes\scene\SandBeach.cpp" />
     <ClCompile Include="..\Classes\scene\TownScene.cpp" />
     <ClCompile Include="main.cpp" />
   </ItemGroup>
@@ -176,8 +179,11 @@ xcopy "$(ProjectDir)..\Resources" "$(OutDir)\Resources\" /D /E /I /F /Y
     <ClInclude Include="..\Classes\layer\StoppingLayer.h" />
     <ClInclude Include="..\Classes\scene\ForestScene.h" />
     <ClInclude Include="..\Classes\scene\HelloWorldScene.h" />
+    <ClInclude Include="..\Classes\scene\Lake.h" />
     <ClInclude Include="..\Classes\scene\MapScene.h" />
+    <ClInclude Include="..\Classes\scene\Mine1.h" />
     <ClInclude Include="..\Classes\scene\ParentScene.h" />
+    <ClInclude Include="..\Classes\scene\SandBeach.h" />
     <ClInclude Include="..\Classes\scene\TownScene.h" />
     <ClInclude Include="main.h" />
   </ItemGroup>
