--- a/mytest/testGame/proj.win32/testGame.vcxproj.filters
+++ b/mytest/testGame/proj.win32/testGame.vcxproj.filters
@@ -51,6 +51,17 @@
     <ClCompile Include="..\Classes\scene\ParentScene.cpp">
       <Filter>src\scene</Filter>
     </ClCompile>
+    <ClCompile Include="..\Classes\character\Crops.cpp" />
+    <ClCompile Include="..\Classes\character\Tree.cpp" />
+    <ClCompile Include="..\Classes\scene\Lake.cpp">
+      <Filter>src\scene</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Classes\scene\Mine1.cpp">
+      <Filter>src\scene</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Classes\scene\SandBeach.cpp">
+      <Filter>src\scene</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="main.h">
@@ -87,6 +98,17 @@
       <Filter>src</Filter>
     </ClInclude>
     <ClInclude Include="..\Classes\scene\ParentScene.h">
+      <Filter>src\scene</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Classes\character\Crops.h" />
+    <ClInclude Include="..\Classes\character\Tree.h" />
+    <ClInclude Include="..\Classes\scene\Lake.h">
+      <Filter>src\scene</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Classes\scene\Mine1.h">
+      <Filter>src\scene</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Classes\scene\SandBeach.h">
       <Filter>src\scene</Filter>
     </ClInclude>
   </ItemGroup>
