--- a/mytest/testGame/proj.win32/testGame.vcxproj
+++ b/mytest/testGame/proj.win32/testGame.vcxproj
@@ -151,7 +151,6 @@ xcopy "$(ProjectDir)..\Resources" "$(OutDir)\Resources\" /D /E /I /F /Y
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="..\Classes\AppDelegate.cpp" />
-    <ClCompile Include="..\Classes\character\Changers.cpp" />
     <ClCompile Include="..\Classes\character\Crops.cpp" />
     <ClCompile Include="..\Classes\character\Npc\DialogSystem.cpp" />
     <ClCompile Include="..\Classes\character\Npc\John.cpp" />
@@ -160,6 +159,7 @@ xcopy "$(ProjectDir)..\Resources" "$(OutDir)\Resources\" /D /E /I /F /Y
     <ClCompile Include="..\Classes\helper\MouseCoordinateLayer.cpp" />
     <ClCompile Include="..\Classes\layer\InventoryLayer.cpp" />
     <ClCompile Include="..\Classes\layer\StoppingLayer.cpp" />
+    <ClCompile Include="..\Classes\layer\ToolLayer.cpp" />
     <ClCompile Include="..\Classes\scene\ForestScene.cpp" />
     <ClCompile Include="..\Classes\scene\HelloWorldScene.cpp" />
     <ClCompile Include="..\Classes\scene\Lake.cpp" />
@@ -167,14 +167,12 @@ xcopy "$(ProjectDir)..\Resources" "$(OutDir)\Resources\" /D /E /I /F /Y
     <ClCompile Include="..\Classes\scene\Mine1.cpp" />
     <ClCompile Include="..\Classes\scene\ParentScene.cpp" />
     <ClCompile Include="..\Classes\scene\SandBeach.cpp" />
-    <ClCompile Include="..\Classes\scene\test.cpp" />
     <ClCompile Include="..\Classes\scene\TownScene.cpp" />
     <ClCompile Include="..\Classes\ui\clock.cpp" />
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\Classes\AppDelegate.h" />
-    <ClInclude Include="..\Classes\character\Changers.h" />
     <ClInclude Include="..\Classes\character\Crops.h" />
     <ClInclude Include="..\Classes\character\Npc\DialogSystem.h" />
     <ClInclude Include="..\Classes\character\Npc\John.h" />
@@ -183,6 +181,7 @@ xcopy "$(ProjectDir)..\Resources" "$(OutDir)\Resources\" /D /E /I /F /Y
     <ClInclude Include="..\Classes\helper\MouseCoordinateLayer.h" />
     <ClInclude Include="..\Classes\layer\InventoryLayer.h" />
     <ClInclude Include="..\Classes\layer\StoppingLayer.h" />
+    <ClInclude Include="..\Classes\layer\ToolLayer.h" />
     <ClInclude Include="..\Classes\scene\ForestScene.h" />
     <ClInclude Include="..\Classes\scene\HelloWorldScene.h" />
     <ClInclude Include="..\Classes\scene\Lake.h" />
@@ -190,7 +189,6 @@ xcopy "$(ProjectDir)..\Resources" "$(OutDir)\Resources\" /D /E /I /F /Y
     <ClInclude Include="..\Classes\scene\Mine1.h" />
     <ClInclude Include="..\Classes\scene\ParentScene.h" />
     <ClInclude Include="..\Classes\scene\SandBeach.h" />
-    <ClInclude Include="..\Classes\scene\test.h" />
     <ClInclude Include="..\Classes\scene\TownScene.h" />
     <ClInclude Include="..\Classes\ui\clock.h" />
     <ClInclude Include="main.h" />
